--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -33,6 +33,8 @@
 
   @media(min-width: 768px) {
     top: 9.7rem;
+    max-width: 48rem;
+    margin: auto;
   }
 
   @media(min-width: 992px) {
